--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,20 +18,9 @@ spec:
       containers:
       - name: hello-world
         image: quay.io/cdoan0/hello-world:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 4001
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: hello-world
-  name: hello-world
-spec:
-  ports:
-  - port: 4001
-    protocol: TCP
-    targetPort: 4001
-  selector:
-    app: hello-world
-
+        env:
+          - name: "PORT"
+            value: "4001"
