--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -24,3 +24,10 @@ spec:
         env:
           - name: "PORT"
             value: "4001"
+        resources:
+          limits:
+            cpu: 200m
+            memory: 256Mi
+          request:
+            cpu: 200m
+            memory: 256Mi
